add num->string->arr function

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -35,6 +35,7 @@
             alert(summ);
         }
 
+
         function function2() {
             let num = +prompt('Enter The Number:', '99999');
 
@@ -51,9 +52,11 @@
 
 
             const digits = numberToArray(num);
+            //const digits = numberToStringArray(num);
 
             alert( digits.join(' ') );
         }
+
 
         function numberToArray(x) {
             const arr = new Array(5);
@@ -66,6 +69,15 @@
             }
 
             arr.reverse();
+
+            return arr;
+        }
+
+
+        function numberToStringArray(x) {
+            x = String(x);
+
+            const arr = x.split('');
 
             return arr;
         }
