--- a/l3/index.html
+++ b/l3/index.html
@@ -2,12 +2,25 @@
 <html>
 
 <head>
-    <title>HW2 by Vladyslav Karpenko</title>
+    <title>Practice Vladyslav Karpenko</title>
+
+    <link rel='icon' type='image/png' href='../resources/logo.png'>
+
+    <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
 
 </head>
 
 <body>
-    <script src='script.js'></script>
+    <div id='paper'>
+        <a href='../index.html'> &lt;-- Back</a><br><br>
+
+        <hr>
+
+
+        <button class="button" onclick="function1()">Click it</button>
+
+        <script src='script.js'></script>
+    </div>
     
 </body>
 
