--- a/l3/index.html
+++ b/l3/index.html
@@ -17,7 +17,7 @@
         <hr>
 
 
-        <button class="button" onclick="function1()">Click it</button>
+        <button class="button" onclick="function1()">Click It</button>
 
         <script src='script.js'></script>
     </div>
