rename hw -> homework

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class='paragraph'>
                 <h3>Lesson 2:</h3>
 
-                <a href='./hw1/index.html'>
+                <a href='./homework1/index.html'>
                     &#x2022; Homework 1
                 </a>
 
@@ -41,15 +41,15 @@
             <div class='paragraph'>
                 <h3>Lesson 3:</h3>
 
-                <a href='./l3/index.html'>
+                <a href='./lesson3/index.html'>
                     &#x2022; Practice
                 </a> <br>
 
-                <a href='./hw2/index.html'>
+                <a href='./homework2/index.html'>
                     &#x2022; Homework 2
                 </a> <br>
 
-                <a href='./hw3/index.html'>
+                <a href='./homework3/index.html'>
                     &#x2022; Homework 3
                 </a> <br>
 
