add button-block div

--- a/homework3/index.html
+++ b/homework3/index.html
@@ -16,9 +16,11 @@
 
         <hr>
 
-
-        <button class="button" onclick="function1()">Task 1</button>
-        <button class="button" onclick="function2()">Task 2</button>
+        
+        <div class="buttons-block">
+            <button class="button" onclick="function1()">Task 1</button>
+            <button class="button" onclick="function2()">Task 2</button>
+        </div>
 
 
         <script>
