--- a/homework1/index.html
+++ b/homework1/index.html
@@ -15,9 +15,9 @@
 
         <hr>
 
-
-        <button class="button" onclick="function1()">Click It</button>
-        
+        <div class="buttons-block">
+            <button class="button" onclick="function1()">Click It</button>
+        </div>
         
         <script>
             function function1() {
