--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -16,8 +16,9 @@
 
         <hr>
 
-
-        <button class="button" onclick="function1()">Click It</button>
+        <div class="buttons-block">
+            <button class="button" onclick="function1()">Click It</button>
+        </div>
 
         <script src='script.js'></script>
     </div>
