class info_text -> info-text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Vladyslav Karpenko</h1>
             <h2>Front End Pro: Homework</h2>
 
-            <div class='info_text'>
+            <div class='info-text'>
                 🕸️ <a href='https://github.com/karpych1717/frontEndPro' target='_blank'>
                         github.com/karpych1717/frontEndPro
                     </a>
