hw2  add button-block

--- a/homework2/index.html
+++ b/homework2/index.html
@@ -17,8 +17,10 @@
         <hr>
         
 
-        <button class="button" onclick="function1()">Click It</button>
-
+        <div class="buttons-block">
+            <button class="button" onclick="function1()">Click It</button>
+        </div>
+        
 
         <script>
             function function1() {
