add hw4 hw5 to the frontPage

--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
 
             </div>
 
+
+            <div class='paragraph'>
+                <h3>Lesson 4:</h3>
+
+                <a href='./homework4/index.html'>
+                    &#x2022; Homework 4
+                </a> <br>
+
+                <a href='./homework5/index.html'>
+                    &#x2022; Homework 5
+                </a> <br>
+
+            </div>
+
         </article>
 
         <hr>
