--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
 
             </div>
 
+
+            <div class='paragraph'>
+                <h3>Lesson 5:</h3>
+
+                <a href='./homework6/index.html'>
+                    &#x2022; Homework 6
+                </a> <br>
+
+            </div>
+
         </article>
 
         <hr>
