--- a/homework6/index.html
+++ b/homework6/index.html
@@ -152,7 +152,7 @@
                 }
 
 
-                console.log( `canI(${N}) = ${canI};` )
+                console.log( `canI(${N}) = ${canI};` );
                 console.log('=========');
 
             }
