--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
 
             </div>
 
+
+            <div class='paragraph'>
+                <h3>Lesson 6:</h3>
+
+                <a href='./homework7/index.html'>
+                    &#x2022; Homework 7
+                </a> <br>
+
+            </div>
+
         </article>
 
         <hr>
