--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
 
             </div>
 
+
+            <div class='paragraph'>
+                <h3>Lesson 7:</h3>
+
+                <a href='./homework8/index.html'>
+                    &#x2022; Homework 8
+                </a> <br>
+
+            </div>
+
         </article>
 
         <hr>
