--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
 
             </div>
 
+
+            <div class='paragraph'>
+                <h3>Lesson 9:</h3>
+
+                <a href='./homework9/index.html'>
+                    &#x2022; Homework 9
+                </a> <br>
+
+            </div>
+
         </article>
 
         <hr>
