--- a/homework10/index.html
+++ b/homework10/index.html
@@ -13,8 +13,8 @@
     <a href='../index.html'> &lt;-- Back</a><br><br>
     <hr>
 
-    <div class="buttons-block">
-      <button class="button" onclick="taskFunction()">Task</button>
+    <div class='buttons-block'>
+      <button class='button' onclick='taskFunction()'>Task</button>
     </div>
 
     <script>
