--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             github.com/karpych1717/frontEndPro
           </a>
       </div>
-
     </div>
 
     <hr>
@@ -34,9 +33,7 @@
         <a href='./homework1/index.html'>
           &#x2022; Homework 1
         </a>
-
       </div>
-
 
       <div class='paragraph'>
         <h3>Lesson 3:</h3>
@@ -52,9 +49,7 @@
         <a href='./homework3/index.html'>
           &#x2022; Homework 3
         </a> <br>
-
       </div>
-
 
       <div class='paragraph'>
         <h3>Lesson 4:</h3>
@@ -66,7 +61,6 @@
         <a href='./homework5/index.html'>
           &#x2022; Homework 5
         </a> <br>
-
       </div>
 
 
@@ -76,7 +70,6 @@
         <a href='./homework6/index.html'>
           &#x2022; Homework 6
         </a> <br>
-
       </div>
 
 
@@ -86,7 +79,6 @@
         <a href='./homework7/index.html'>
           &#x2022; Homework 7
         </a> <br>
-
       </div>
 
 
@@ -96,7 +88,6 @@
         <a href='./homework8/index.html'>
           &#x2022; Homework 8
         </a> <br>
-
       </div>
 
 
@@ -106,7 +97,6 @@
         <a href='./homework9/index.html'>
           &#x2022; Homework 9
         </a> <br>
-
       </div>
 
 
@@ -116,13 +106,22 @@
         <a href='./homework10/index.html'>
           &#x2022; Homework 10
         </a> <br>
-
       </div>
 
+      <div class='paragraph'>
+        <h3>Lesson 11:</h3>
+
+        <a href='./homework11/index.html'>
+          &#x2022; Homework 11
+        </a> <br>
+
+        <a href='./homework12/index.html'>
+            &#x2022; Homework 12
+        </a> <br>
+      </div>
     </article>
 
     <hr>
-
 
     <footer>
       The sheep were borrowed from the 
@@ -130,23 +129,19 @@
       project.
 
     </footer>
-
     
     <script style='display:none'>
       const AMOUNT = 3;
       const sheeps = [];
   
       const DELAY = 1500;
-  
-  
+ 
       for (let i = 0; i < AMOUNT; ++i) {
         sheeps.push( new eSheep() );
         setTimeout( () => sheeps[i].Start(), i * (Math.random() + i) * DELAY);
       }
     </script>
-
-  </div>
-  
+  </div>  
 </body>
 
 </html>
