removed extra code from index

--- a/homework11/index.html
+++ b/homework11/index.html
@@ -11,23 +11,11 @@
 
 <body>
   <div id='paper'>
-    <a href='../index.html'> &lt;-- Back</a><br><br>
-    <hr>
-
-    <!--
-    <div class='buttons-block'>
-      <button class='button' onclick='taskFunction1()'>Task1</button>
-      <button class='button' onclick='taskFunction2()'>Task2</button>
-    </div>
-
-    <script>
-      'use strict'
-
-      function taskFunction1 () {
-        
-      }
-    </script>
-    -->    
+    <a href='../index.html'> &lt;-- Back</a>
+    <br>
+    <br>
+    
+    <hr>   
   </div>    
 </body>
 
