fix hw11 12 titles

--- a/homework12/index.html
+++ b/homework12/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>HW10 by Vladyslav Karpenko</title>
+  <title>HW12 by Vlad Karpenko</title>
   <link rel='icon' type='image/png' href='../resources/logo.png'>
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
