--- a/homework11/index.html
+++ b/homework11/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>HW10 by Vladyslav Karpenko</title>
+  <title>HW11 by Vlad Karpenko</title>
   <link rel='icon' type='image/png' href='../resources/logo.png'>
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
@@ -14,7 +14,7 @@
     <a href='../index.html'> &lt;-- Back</a>
     <br>
     <br>
-    
+
     <hr>   
   </div>    
 </body>
