--- a/homework1/index.html
+++ b/homework1/index.html
@@ -21,7 +21,7 @@
         </div>
 
         
-        <script>
+        <script class='to-show'>
             function function1() {
                 const str = 'text';
                 console.log('1.\t' + typeof str);
