--- a/homework10/index.html
+++ b/homework10/index.html
@@ -17,7 +17,7 @@
       <button class='button' onclick='taskFunction()'>Task</button>
     </div>
 
-    <script>
+    <script class='to-show'>
       'use strict'
 
       function taskFunction() {
