--- a/homework2/index.html
+++ b/homework2/index.html
@@ -22,7 +22,7 @@
         </div>
         
 
-        <script>
+        <script class='to-show'>
             function function1() {
                 let userName = prompt('What is your name?', 'noname');
 
