--- a/homework3/index.html
+++ b/homework3/index.html
@@ -23,7 +23,7 @@
         </div>
 
 
-        <script>
+        <script class='to-show'>
             function function1() {
                 const str1 = prompt('Enter first string:',  'str1');
                 const str2 = prompt('Enter second string:', 'str2');
