--- a/homework4/index.html
+++ b/homework4/index.html
@@ -22,7 +22,7 @@
         </div>
 
 
-        <script>
+        <script class='to-show'>
             function taskFunction() {
                 const userYear  = prompt('Enter year:',  '1999');
                 let   userCity  = prompt('Enter city:',  'Monaco');
