--- a/homework5/index.html
+++ b/homework5/index.html
@@ -22,7 +22,7 @@
         </div>
 
 
-        <script>
+        <script class='to-show'>
             function taskFunction() {
                 let numOrStr = prompt('input number or string');
                 console.log(numOrStr);
