--- a/homework9/index.html
+++ b/homework9/index.html
@@ -22,7 +22,7 @@
         </div>
 
 
-        <script>
+        <script class='to-show'>
             'use strict'
 
             function taskFunction() {
