--- a/homework6/index.html
+++ b/homework6/index.html
@@ -26,7 +26,7 @@
         </div>
 
 
-        <script>
+        <script class='to-show'>
             'use strict'
 
             function taskFunction1() {
