--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
             &#x2022; Homework 12
         </a> <br>
       </div>
+
+      <div class='paragraph'>
+        <h3>Lesson 12:</h3>
+
+        <a href='./homework13/index.html'>
+          &#x2022; Homework 13
+        </a> <br>
+
+        <a href='./homework14/index.html'>
+            &#x2022; Homework 14
+        </a> <br>
+      </div>
     </article>
 
     <hr>
