--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
       </div>
     </article>
 
+    <div class='paragraph'>
+      <h3>Lesson 13:</h3>
+
+      <a href='./lesson13/index.html'>
+        &#x2022; Practice
+      </a> <br>
+    </div>
+
     <hr>
 
     <footer>
