--- a/homework15/index.html
+++ b/homework15/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>HW14 by Vlad Karpenko</title>
+  <title>HW15 by Vlad Karpenko</title>
   <link rel='icon' type='image/png' href='../resources/logo.png'>
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
@@ -17,7 +17,7 @@
     
     <hr>
 
-    <div class='buttons-block'></div>
+    <div class='list-block'></div>
 
   </div>    
 </body>
