--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
       <a href='./lesson13/index.html'>
         &#x2022; Practice
       </a> <br>
+
+      <a href='./homework15/index.html'>
+        &#x2022; Homework 15 (toDo list v0.1)
+      </a> <br>
     </div>
 
     <hr>
