--- a/homework15/index.html
+++ b/homework15/index.html
@@ -6,7 +6,7 @@
   <link rel='icon' type='image/png' href='../resources/logo.png'>
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
-  <script src="./script.js"></script>
+  <script type='module' src="./main.js"></script>
 </head>
 
 <body>
