--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
       </a> <br>
     </div>
 
+    <div class='paragraph'>
+      <h3>Lesson 14:</h3>
+
+      <a href='./homework15/index.html'>
+        &#x2022; Homework 16
+      </a> <br>
+    </div>
+
     <hr>
 
     <footer>
