init modal windows

--- a/homework16/index.html
+++ b/homework16/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-  <title>HW14 by Vlad Karpenko</title>
+  <title>HW16 by Vlad Karpenko</title>
   <link rel='icon' type='image/png' href='../resources/logo.png'>
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
+  <link rel='stylesheet' type='text/css' href='./styles.css'>
   <script src="./script.js"></script>
 </head>
 
@@ -19,6 +20,20 @@
 
     <div class='buttons-block'></div>
 
+    <div class='js--modal modal'>
+      <div class='modal-content'>
+        <header class='modal-header'>
+          <h4>Here is a message:</h4>
+          <button type='button' class='button'>X</button>
+        </header>
+        <main class='modal-body'>
+          <h3>ALERT!!!11</h3>
+        </main>
+        <footer class='modal-footer'>
+          <button type='button' class='button'>Ok</button>
+        </footer>
+      </div>
+    </div>
   </div>    
 </body>
 
