--- a/homework16/index.html
+++ b/homework16/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>HW* by Vlad Karpenko</title>
+  <title>HW16 by Vlad Karpenko</title>
   <link rel='icon' type='image/png' href='../resources/logo.png'>
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
