--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
     <div class='paragraph'>
       <h3>Lesson 14:</h3>
 
-      <a href='./homework15/index.html'>
+      <a href='./lesson14/index.html'>
+        &#x2022; Practice
+      </a> <br>
+
+      <a href='./homework16/index.html'>
         &#x2022; Homework 16
       </a> <br>
     </div>
