--- a/homework16/index.html
+++ b/homework16/index.html
@@ -7,7 +7,7 @@
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
   <link rel='stylesheet' type='text/css' href='./styles.css'>
-  <script src="./script.js"></script>
+  <script src='./script.js'></script>
 </head>
 
 <body>
@@ -18,21 +18,9 @@
     
     <hr>
 
-    <div class='buttons-block'></div>
-
-    <div class='js--modal modal'>
-      <div class='modal-content'>
-        <header class='modal-header'>
-          <h4>Here is a message:</h4>
-          <button type='button' class='button'>X</button>
-        </header>
-        <main class='modal-body'>
-          <h3>ALERT!!!11</h3>
-        </main>
-        <footer class='modal-footer'>
-          <button type='button' class='button'>Ok</button>
-        </footer>
-      </div>
+    <div class='pic-wrapper'>
+      <button type='button' id='button-left'>&lt;</button>
+      <button type='button' id='button-right'>&gt;</button>
     </div>
   </div>    
 </body>
