--- a/homework17/index.html
+++ b/homework17/index.html
@@ -7,7 +7,9 @@
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
   <link rel='stylesheet' type='text/css' href='./styles.css'>
-  <script src='./script.js'></script>
+  
+  <script type='module' src='./app.js'></script>
+  <script type='module' src='./script.js'></script>
 </head>
 
 <body>
