--- a/homework17/index.html
+++ b/homework17/index.html
@@ -30,17 +30,17 @@
               <th>Actions</th>
           </thead>
           <tbody class='js--content'>
-            <template>
+            <template class='js--row-template'>
               <tr>
-                <th class='js--id'></th>
-                <th class='js--name'></th>
-                <th class='js--phone'></th>
-                <th class='js--age'></th>
-                <th class='js--actions'>
+                <td class='js--user-id'></td>
+                <td class='js--user-name'></td>
+                <td class='js--user-phone'></td>
+                <td class='js--user-age'></td>
+                <td class='js--actions'>
                   <button class='js--view-button view-button'>View</button>
                   <button class='js--edit-button edit-button'>Edit</button>
                   <button class='js--delete-button delete-button'>Delete</button>
-                </th>
+                </td>
               </tr>
             </template>
           </tbody>
