--- a/homework17/index.html
+++ b/homework17/index.html
@@ -48,12 +48,12 @@
       <div class='card'>
           <button class='js--add-button button'>Add user</button>
       </div>
-      <form class='js--form card'>
+      <form class='js--form js--hidden card'>
           <input type='hidden' name='id'>
           <input class='form-control' type='text' name='name' placeholder='Name' required>
           <input class='form-control' type='text' name='phone' placeholder='Phone' required>
           <input class='form-control' type='number' name='age' placeholder='Age' min='18' required>
-          <button class='js--submit-button button' type='submit'>OK</button>
+          <button class='js--submit-button button' type='submit'>Add</button>
       </form>
   </div>
   </div>    
