--- a/homework17/index.html
+++ b/homework17/index.html
@@ -37,9 +37,9 @@
                 <td class='js--user-phone'></td>
                 <td class='js--user-age'></td>
                 <td class='js--actions'>
-                  <button class='js--view-button view-button'>View</button>
-                  <button class='js--edit-button edit-button'>Edit</button>
-                  <button class='js--delete-button delete-button'>Delete</button>
+                  <button class='view-button' data-action='view'>View</button>
+                  <button class='edit-button' data-action='edit'>Edit</button>
+                  <button class='delete-button' data-action='delete'>Delete</button>
                 </td>
               </tr>
             </template>
