--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
       </a> <br>
     </div>
 
+    <div class='paragraph'>
+      <h3>Lesson 16:</h3>
+
+      <a href='./homework17/index.html'>
+        &#x2022; Homework 17
+      </a> <br>
+    </div>
+
     <hr>
 
     <footer>
