--- a/homework18/index.html
+++ b/homework18/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 <ul class="gallery">
