--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
       </a> <br>
     </div>
 
+    <div class='paragraph'>
+      <h3>Lesson 17:</h3>
+
+      <a href='./homework18/index.html'>
+        &#x2022; Homework 18
+      </a> <br>
+    </div>
+
     <hr>
 
     <footer>
