--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
     <div class='paragraph'>
       <h3>Lesson 17:</h3>
 
+      <a href='./lesson18/index.html'>
+        &#x2022; Practice (Closure)
+      </a> <br>
+
       <a href='./homework18/index.html'>
         &#x2022; Homework 18
       </a> <br>
