make pages.json storage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel='icon' type='image/png' href='./resources/logo.png'>
 
   <link rel='stylesheet' type='text/css' href='./resources/styles.css'>
+  <script type='text/javascript' src='./resources/script.js'></script>
 
   <script src="https://adrianotiger.github.io/web-esheep/dist/esheep.min.js"></script>
 </head>
@@ -25,158 +26,16 @@
 
     <hr>
 
-
     <article id='pages'>
-      <div class='paragraph'>
-        <h3>Lesson 2:</h3>
-
-        <a href='./homework1/index.html'>
-          &#x2022; Homework 1
-        </a>
-      </div>
-
-      <div class='paragraph'>
-        <h3>Lesson 3:</h3>
-
-        <a href='./lesson3/index.html'>
-          &#x2022; Practice
-        </a> <br>
-
-        <a href='./homework2/index.html'>
-          &#x2022; Homework 2
-        </a> <br>
-
-        <a href='./homework3/index.html'>
-          &#x2022; Homework 3
-        </a> <br>
-      </div>
-
-      <div class='paragraph'>
-        <h3>Lesson 4:</h3>
-
-        <a href='./homework4/index.html'>
-          &#x2022; Homework 4
-        </a> <br>
-
-        <a href='./homework5/index.html'>
-          &#x2022; Homework 5
-        </a> <br>
-      </div>
-
-
-      <div class='paragraph'>
-        <h3>Lesson 5:</h3>
-
-        <a href='./homework6/index.html'>
-          &#x2022; Homework 6
-        </a> <br>
-      </div>
-
-
-      <div class='paragraph'>
-        <h3>Lesson 6:</h3>
-
-        <a href='./homework7/index.html'>
-          &#x2022; Homework 7
-        </a> <br>
-      </div>
-
-
-      <div class='paragraph'>
-        <h3>Lesson 7:</h3>
-
-        <a href='./homework8/index.html'>
-          &#x2022; Homework 8
-        </a> <br>
-      </div>
-
-
-      <div class='paragraph'>
-        <h3>Lesson 9:</h3>
-
-        <a href='./homework9/index.html'>
-          &#x2022; Homework 9
-        </a> <br>
-      </div>
-
-
-      <div class='paragraph'>
-        <h3>Lesson 10:</h3>
-
-        <a href='./homework10/index.html'>
-          &#x2022; Homework 10
-        </a> <br>
-      </div>
-
-      <div class='paragraph'>
-        <h3>Lesson 11:</h3>
-
-        <a href='./homework11/index.html'>
-          &#x2022; Homework 11
-        </a> <br>
-
-        <a href='./homework12/index.html'>
-            &#x2022; Homework 12
-        </a> <br>
-      </div>
-
-      <div class='paragraph'>
-        <h3>Lesson 12:</h3>
-
-        <a href='./homework13/index.html'>
-          &#x2022; Homework 13
-        </a> <br>
-
-        <a href='./homework14/index.html'>
-            &#x2022; Homework 14
-        </a> <br>
-      </div>
+      <ul class='pages-list'>
+        <template id='page-template'>
+          <li class='paragraph'>
+            <h3></h3>
+            <ul class='inactive'></ul>
+          </li>
+        </template>
+      </ul>
     </article>
-
-    <div class='paragraph'>
-      <h3>Lesson 13:</h3>
-
-      <a href='./lesson13/index.html'>
-        &#x2022; Practice
-      </a> <br>
-
-      <a href='./homework15/index.html'>
-        &#x2022; Homework 15 (toDo list v0.2)
-      </a> <br>
-    </div>
-
-    <div class='paragraph'>
-      <h3>Lesson 14:</h3>
-
-      <a href='./lesson14/index.html'>
-        &#x2022; Practice
-      </a> <br>
-
-      <a href='./homework16/index.html'>
-        &#x2022; Homework 16
-      </a> <br>
-    </div>
-
-    <div class='paragraph'>
-      <h3>Lesson 16:</h3>
-
-      <a href='./homework17/index.html'>
-        &#x2022; Homework 17
-      </a> <br>
-    </div>
-
-    <div class='paragraph'>
-      <h3>Lesson 17:</h3>
-
-      <a href='./lesson18/index.html'>
-        &#x2022; Practice (Closure)
-      </a> <br>
-
-      <a href='./homework18/index.html'>
-        &#x2022; Homework 18
-      </a> <br>
-    </div>
-
     <hr>
 
     <footer>
