--- a/homework21/index.html
+++ b/homework21/index.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-  <title>HW15 by Vlad Karpenko</title>
+  <title>HW21 by Vlad Karpenko</title>
   <link rel='icon' type='image/png' href='../resources/logo.png'>
 
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
+  <link rel='stylesheet' type='text/css' href='styles.css'>
 
   <script type='module' src="./main.js"></script>
 </head>
@@ -15,6 +16,14 @@
     <a href='../index.html'> &lt;-- Back</a>
     <br>
     <br>
+
+    <div class='buttons-block'>
+      <button type='button' class='button'>Get it</button>
+    </div>
+
+    <div class='js--weather weather'>
+      <span>The weather is fine</span>
+    </div>
 
   </div>    
 </body>
