--- a/homework21/index.html
+++ b/homework21/index.html
@@ -22,6 +22,8 @@
     </div>
 
     <div class='js--weather weather'>
+      <img src='./waiting.gif' alt='weather'>
+      <br>
       <span>The weather is fine</span>
     </div>
 
