--- a/homework22/index.html
+++ b/homework22/index.html
@@ -26,13 +26,13 @@
       <article class='js--post post js--hidden'>
         <div class='js--post-text post-text'>
           <p></p>
-          <button class='js--show-comments'>Show comments</button>
+          <button class='js--show-comments button'>Show comments</button>
         </div>
-        <div class='js--comments'>
+        <div class='js--comments js--hidden'>
           <template class='js--comment-template'>
             <div class='js--comment comment'>
               <p class='js--comment-name comment-name'></p>
-              <p class='js--comment-mail comment-mail'></p>
+              <p class='js--comment-email comment-email'></p>
               <p class='js--comment-body comment-body'></p>
             </div>
           </template>
