--- a/homework23/src/index.html
+++ b/homework23/src/index.html
@@ -8,7 +8,7 @@
   <link rel='stylesheet' type='text/css' href='../resources/styles.css'>
   <link rel='stylesheet' type='text/css' href='./styles.css'>
   
-  <script type='module' src='./script.js'></script>
+  <script type='text/javascript' src='./index.js'></script>
 </head>
 
 <body>
