--- a/homework25/index.html
+++ b/homework25/index.html
@@ -4,54 +4,37 @@
   <title>HW15 by Vlad Karpenko</title>
   <link rel='icon' type='image/png' href='../resources/logo.png'>
 
-  <link
-    href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css'
-    rel='stylesheet'
-    integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx'
-    crossorigin='anonymous'
-  >
+  <link rel="stylesheet" href="./styles.css">
 
-  <style>
-    .card {
-      position: relative;
-    }
-    .load {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: calc(50% - 18px);
-      text-align: center;
-    }
-  </style>
   <script type='module' src='./js/main.js'></script>
 </head>
 
 <body>
-<div class='container'>
+<div class='paper'>
   <a href='../index.html'> &lt;-- Back</a>
   <br>
   <br>
   <h1>SWAPI</h1>
   <hr>
 
-  <form action='https://swapi.dev/api' class='input-group mb-3 js--swapi_form'>
-    <span class='input-group-text' id='basic-addon3'>https://swapi.dev/api</span>
-    <input type='text' name='url' class='form-control js--swapi_input' id='basic-url' placeholder='/people/1/' aria-describedby='basic-addon3'>
-    <button class='btn btn-outline-secondary' type='submit' id='button-addon2'>Get info</button>
+  <form action='https://swapi.dev/api' class='form js--swapi_form'>
+    <span class='input-text'>https://swapi.dev/api</span>
+    <input type='text' name='url' class='form-input js--swapi_input' id='basic-url' placeholder='/people/1/'>
+    <button class='button' type='submit'>Get info</button>
   </form>
 
   <div class='card'>
     <div class='card-body'>
-      <span class='badge d-none bg-secondary js--swapi_controller'>people</span>
-      <span class='badge d-none bg-secondary js--swapi_id'>1</span>
+      <span class='inactive js--swapi_controller'></span>
+      <span class='inactive js--swapi_id'></span>
 
-      <div class='load d-none js--swapi_load'>
-        <div class='spinner-border' role='status'>
-          <span class='visually-hidden'>Loading...</span>
-        </div>
+      <div class='inactive loader js--swapi_load'>
+        <img src='./loader.gif' width='40px'>
+        <br>
+        <span>Loading...</span>
       </div>
 
-      <pre class='mt-2 mb-0 js--swapi_pre'></pre>
+      <pre class='js--swapi_pre'></pre>
     </div>
   </div>
 </div>
