--- a/homework25/index.html
+++ b/homework25/index.html
@@ -19,7 +19,7 @@
 
   <form action='https://swapi.dev/api' class='form js--swapi_form'>
     <span class='input-text'>https://swapi.dev/api</span>
-    <input type='text' name='url' class='form-input js--swapi_input' id='basic-url' placeholder='/people/1/'>
+    <input type='text' name='url' class='form-input js--swapi_input' placeholder='/people/1/'>
     <button class='button' type='submit'>Get info</button>
   </form>
 
